fixed projects slider and responsiveness issues on small width devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,16 +108,13 @@
 // React router pages
 .page-appear {
   opacity: 0;
-  transform: 'scale(0.7)';
 }
 .page-appear-active {
   opacity: 1;
-  transform: 'scale(1)';
   transition: all .3s ease-in-out;
 }
 .page-enter {
   opacity: 0; 
-  transform: 'scale(0.9)';
 }
 .page-enter-active {
   opacity: 1;
@@ -125,10 +122,8 @@
 }
 .page-exit {
   opacity: 1;
-  transform: 'scale(1)';
 }
 .page-exit-active {
   opacity: 0;
-  transform: 'scale(0.9)';
   transition: all .3s ease-in-out;
 }
